# some-snippets-rs

./: .gitignore  Cargo.toml  README.md  onekey-tasks.yaml
common-http-server/: Cargo.toml
common-http-server/doc/: AUTH_GUIDE.md  CORS_GUIDE.md  DEVELOPMENT_PLAN.md  MONITORING_GUIDE.md  PROTECTION_GUIDE.md  README.md  SAMPLES.md  SECURITY_NOTES.md  repair.md
common-http-server/examples/: jwt_with_client.rs  level1_basic.rs  level2_app_config.rs  level3_security_and_monitoring.rs  level4_graceful_shutdown.rs  level5_runtime_console.rs  level5_terminal_ui.rs
common-http-server/src/: lib.rs  main.rs  monitoring.rs
common-http-server/src/auth/: config.rs  helpers.rs  jwt.rs  middleware.rs  mod.rs  types.rs
common-http-server/src/core/: app.rs  client_ip.rs  console.rs  cors.rs  health.rs  logging.rs  mod.rs  response.rs  server.rs
common-http-server/src/core/runtime_ui/: actions.rs  app.rs  event.rs  mod.rs  state.rs  ui.rs
common-http-server/src/protection/: ddos_protection.rs  ip_filter.rs  mod.rs  rate_limit.rs  size_limit.rs  stack.rs
docs/: web-ui-development.md
docs_design/: 00-product-vision-and-scope.md  01-domain-model.md  02-permission-and-policy.md  03-versioning-and-publishing.md  04-storage-and-data-layout.md  05-api-design.md  06-service-architecture-axum.md  07-database-schema.md  08-evolution-roadmap.md  09-content-json-schema.md  10-web-frontend-and-hosting.md  README.md
docs_dev/: README.md  T01-初始化工程骨架.md  T02-基础配置错误模型与公共能力.md  T03-数据库迁移之空间与内容主表.md  T04-数据库迁移之节点与文件元数据.md  T05-对象存储与快照命名抽象.md  T06-节点仓储与CopyOnWrite服务.md  T07-Draft快照编排服务.md  T08-CommitLatest流程.md  T09-CreateVersion流程.md  T10-Rollback流程.md  T11-RESTAPI与DTO.md  T12-权限校验与审计接入.md  T13-集成测试与样例夹具.md  T14-初始化web-admin工程骨架.md  T15-axum静态托管与开发代理支持.md  T16-web-admin应用壳路由与API基础层.md  T17-Collection与Content管理页面.md  T18-内容编辑工作台.md  T19-版本管理页面.md  T20-前端测试构建与交付约束.md
docs_issue/: deferred__Q20260301-01__迁移外键建表顺序错误.md  resolved__Q20260329-01__版本标识格式不一致.md  resolved__Q20260329-02__版本生成缺转换步骤.md  resolved__Q20260329-03__局部文档仍保留旧口径.md  waiting_user__Q20260301-01__迁移外键建表顺序错误.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260215_000001_create_tables.rs  m20260329_000001_create_collections.rs  m20260329_000002_create_contents.rs  m20260329_000003_create_content_versions.rs  m20260329_000004_create_nodes.rs  m20260329_000005_create_file_metadata.rs
scripts/: dev-start.sh
src/: app.rs  crud.rs  lib.rs  main.rs
src/app/: mod.rs  state.rs
src/config/: mod.rs
src/domains/: mod.rs  usecases.rs
src/entity/: mod.rs
src/error/: mod.rs
src/handler/: collection_handler.rs  error_mapper.rs  file_handler.rs  health_handler.rs  mod.rs  resource_handler.rs
src/modules/: mod.rs
src/modules/auth/: permission.rs
src/modules/collection/: mod.rs
src/modules/content/: draft_service.rs  mod.rs  repository.rs  service.rs
src/modules/file/: model.rs  repository.rs  service.rs
src/modules/node/: model.rs  repository.rs  service.rs
src/persistence/: mod.rs
src/persistence/collection/: entity.rs  mod.rs
src/persistence/file/: entity.rs  mod.rs
src/persistence/history/: entity.rs  mod.rs
src/persistence/history_node/: entity.rs  mod.rs
src/persistence/node/: entity.rs  mod.rs
src/persistence/snippet/: entity.rs  mod.rs
src/persistence/snippet_tag/: entity.rs  mod.rs
src/persistence/tag/: entity.rs  mod.rs
src/persistence/text/: entity.rs  mod.rs
src/repository/: collection_repository.rs  file_repository.rs  mod.rs  resource_repository.rs
src/service/: collection_service.rs  common.rs  error.rs  file_service.rs  mod.rs  resource_service.rs
src/storage/: mod.rs
src/storage/object_store/: local.rs  mod.rs
src/storage/snapshot/: checksum.rs  draft.rs  latest.rs  mod.rs  path.rs  rollback.rs  version.rs
src/web/: response.rs  router.rs
src/web/dto/: content.rs  draft.rs  file_metadata.rs  mod.rs  node.rs
src/web/handlers/: content.rs  file_metadata.rs  health.rs  mod.rs  node.rs
src/web/middleware/: authz.rs
tests/: collection_flow.rs  integration_flow.rs
tests/fixtures/: README.md
tests/support/: mod.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-admin/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web-admin/src/: App.vue  env.d.ts  main.ts
web-admin/src/api/: client.ts  content.ts  file-metadata.ts  node.ts  (+2 more)
web/src/: main.ts  styles.css
(+50 files in other folders)
