[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false


[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = "1.0"