[package]
name = "some-snippets-migration"
version = "0.1.0"
edition = "2024"

[lib]
name = "some_snippets_migration"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
sea-orm-migration = { version = "1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }
